# TGOpenGLEngine

./: .gitignore  OpenGL01.sln  README.md
OpenGL01/: CMakeLists.txt  ITGBaseLight.cpp  ITGBaseLight.h  ITGMeshProxy.h  ITGSceneItem.cpp  ITGSceneItem.h  Makefile  OpenGL01.vcxproj  OpenGL01.vcxproj.filters  TGCamera.cpp  TGCamera.h  TGFrameBuffer.cpp  TGFrameBuffer.h  TGInstancedMesh.cpp  TGInstancedMesh.h  TGLocalPlayer.cpp  TGLocalPlayer.h  TGMaterial.cpp  TGMaterial.h  TGMeshFactory.cpp  TGMeshFactory.h  TGMeshGeometry.cpp  TGMeshGeometry.h  TGModel.cpp  TGModel.h  TGProgram.h  TGScene.h  TGShader.cpp  TGShader.h  TGShaderProgram.cpp  TGShaderProgram.h  TGSkyBox.cpp  TGSkyBox.h  TGTexture.cpp  TGTexture.h  brew.sh  cmake.sh  main.cpp  vcpkg.json  vcpkg.sh
OpenGL01/Components/: TGStaticMeshComponent.h
OpenGL01/Meshes/clouse/: license.txt  scene.gltf
OpenGL01/Meshes/leaf/: license.txt  scene.gltf
OpenGL01/Shaders/: Light.frag  PS.frag  VS.vert  boxReflection.frag  boxReflection.vert  depthTest.frag  frameBuffer.frag  gBufferLightPassMass.frag  gbufferLightPass.frag  gbufferMainPass.frag  gbufferMainPass.vert  ground.frag  instancedGBufferMainPass.frag  instancedGBufferMainPass.vert  skybox.vert  stencilOutline.frag  stencilOutline.vert
OpenGL01/Shaders/shared/: material.glsl
